# nexthop

./: .commitlintrc.json  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPATIBILITY.md  CONTRIBUTING.md  Cargo.toml  MANUAL.md  README.md  RELEASING.md  SECURITY.md  config.example.toml  deny.toml  index.html  nexthop.toml  package-lock.json  package.json  plan.txt  release-please-config.json  vite.config.ts
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: commitlint.yml  fuzz.yml  gitleaks.yml  release-please.yml  release.yml  rust.yml
docs/adr/: 0001-conventional-commits-and-release-please.md  0002-transform-pipeline.md
scripts/: bump-version.ps1
src/: App.tsx  config.rs  error.rs  index.css  rate_limiter.rs  relay.rs  stats.rs  transport.rs  types.ts
src-tauri/: Cargo.toml  build.rs  nexthop.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/fuzz/: .gitignore  Cargo.toml
src-tauri/fuzz/corpus/config_parser/: all_optional.toml  malformed.toml  minimal.toml  multicast.toml
src-tauri/fuzz/fuzz_targets/: config_parser.rs  source_read.rs
src-tauri/icons/: icon.icns
src-tauri/src/: app_state.rs  commands.rs  config.rs  error.rs  lib.rs  main.rs  prefs.rs  rate_limiter.rs  relay.rs  stats.rs  transport.rs
src-tauri/src/relay/: transforms.rs
src-tauri/tests/: cross_protocol.rs  dest_reconnection.rs  hot_reload_packet_flow.rs  hot_reload_rate_limit.rs  overflow_policies.rs  sigterm_shutdown.rs  source_disconnect.rs  transforms_pipeline.rs
src-tauri/tests/common/: mod.rs
src/__tests__/: types.test.ts  utils.test.ts
src/components/: ConfigTab.tsx  MonitorTab.tsx  PrefsTab.tsx
