# SPDX-License-Identifier: GPL-3.0-or-later
# Copyright (C) 2026-present Patrick S Connallon

[package]
name        = "nexthop"
version     = "0.3.0"
edition     = "2021"
description = "Raw TCP/UDP relay with cross-protocol support"
license     = "GPL-3.0-or-later"

[lib]
name       = "nexthop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri              = { version = "2", features = [] }
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
tokio              = { version = "1", features = ["full"] }
toml               = "0.8"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
bytes              = "1"
socket2            = { version = "0.5", features = ["all"] }
thiserror          = "2"
clap               = { version = "4", features = ["derive"] }
notify             = "6"
futures            = "0.3"
if-addrs           = "0.10"
arc-swap           = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
proptest = "1"

[target.'cfg(unix)'.dev-dependencies]
libc = "0.2"

[features]
default         = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
