# SPDX-License-Identifier: GPL-3.0-or-later
# Copyright (C) 2026-present Patrick S Connallon

[package]
name        = "nexthop"
version     = "0.6.2"  # x-release-please-version
edition     = "2021"
description = "Raw TCP/UDP relay with cross-protocol support"
license     = "GPL-3.0-or-later"

[lib]
name       = "nexthop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
# `tauri` is optional so consumers that only need the headless relay
# (fuzz harnesses, other embedders) can disable the `gui` feature and
# drop the entire Tauri toolchain — including the `generate_context!`
# proc-macro that validates the frontend dist at compile time.
tauri              = { version = "2", features = [], optional = true }
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
tokio              = { version = "1", features = ["full"] }
toml               = "1.1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
bytes              = "1"
socket2            = { version = "0.6", features = ["all"] }
thiserror          = "2"
clap               = { version = "4", features = ["derive"] }
notify             = "8"
futures            = "0.3"
if-addrs           = "0.15"
arc-swap           = "1"
regex              = "1"

[build-dependencies]
# Mirror the runtime dep: `tauri-build` is only needed when the `gui`
# feature is on. Without the matching gate, `cargo build
# --no-default-features` would still pull tauri-build and run
# `tauri_build::build()`.
tauri-build = { version = "2", features = [], optional = true }

[dev-dependencies]
proptest = "1"

[target.'cfg(unix)'.dev-dependencies]
libc = "0.2"

[features]
# `gui` brings in Tauri (runtime + build script). `custom-protocol`
# layers Tauri's custom-protocol asset embedding on top of `gui`. The
# default keeps existing behavior — `cargo build` at the repo root
# still produces the desktop app.
default         = ["custom-protocol"]
gui             = ["dep:tauri", "dep:tauri-build"]
custom-protocol = ["gui", "tauri/custom-protocol"]
