# SPDX-License-Identifier: GPL-3.0-or-later
# Copyright (C) 2026-present Patrick S Connallon

# Standalone fuzz crate. Declared as its own workspace root via the
# empty `[workspace]` table below so cargo never tries to attach this
# crate to the parent `nexthop` workspace. libfuzzer-sys needs nightly
# + address-sanitizer instrumentation that stable cargo cannot
# satisfy; keeping this manifest workspace-isolated is the cargo-fuzz
# convention and avoids `believes it's in a workspace when it's not`
# errors when `cargo fuzz run` walks up the directory tree. The
# parent `Cargo.toml`'s `exclude` list keeps `cargo build` /
# `cargo test` at the repo root from descending into here.

[workspace]

[package]
name        = "nexthop-fuzz"
version     = "0.0.0"
publish     = false
edition     = "2021"
description = "libfuzzer harnesses for the nexthop relay"
license     = "GPL-3.0-or-later"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
bytes         = "1"
toml          = "0.8"
nexthop_lib   = { package = "nexthop", path = ".." }

# Each target is a separate binary. `test = false`, `doc = false`, and
# `bench = false` keep `cargo test` etc. from trying to compile them
# under the normal harness — only `cargo fuzz run <target>` does.

[[bin]]
name             = "config_parser"
path             = "fuzz_targets/config_parser.rs"
test             = false
doc              = false
bench            = false

[[bin]]
name             = "source_read"
path             = "fuzz_targets/source_read.rs"
test             = false
doc              = false
bench            = false
